# flask-to-beanstalk

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-infrastructure.yml
app/: main.py  wsgi.py
docker/: headers.conf  mime.types  nginx.conf
docker/gunicorn.service/: run
docker/nginx.service/: run
terraform/: backend.tf  main.tf  outputs.tf  provider.tf  variables.tf
terraform/envs/: development.tfvars
