[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = "A production-ready flask app"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
